--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-  deploy:
+  deploy-gh-pages:
 
     runs-on: ubuntu-latest
 
@@ -19,7 +19,7 @@ jobs:
       - name: Optimize map
         uses: thecodingmachine/map-optimizer-action@master
 
-      - name: Bash
+      - name: Commit
         run: |
           ls -al
           git config --global user.email "github@syntax-fehler.de"
@@ -35,6 +35,6 @@ jobs:
           FOLDER: . # The folder the action should deploy.
           BASE_BRANCH: master
 
-      - name: Bash2
+      - name: List Files
         run: |
           ls -al
